@@ -1,21 +1,18 @@
 package main;
 
-import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.*;
-import java.util.List;
+import org.springframework.http.ResponseEntity;
+import java.util.*;
 
 @RestController
 @RequestMapping("/doctor")
 public class DoctorController {
 
-    @GetMapping("/{id}/availability")
-    public ResponseEntity<?> getDoctorAvailability(@PathVariable Long id,
-                                                   @RequestHeader("Authorization") String token) {
-        if (!token.startsWith("Bearer ")) {
-            return ResponseEntity.status(401).body("Invalid token");
-        }
-
-        List<String> availableTimes = List.of("2025-10-05 10:00", "2025-10-05 14:00");
-        return ResponseEntity.ok(availableTimes);
+    // Q5 - GET endpoint
+    @GetMapping("/availability")
+    public ResponseEntity<List<String>> getAvailability(@RequestParam String name) {
+        // mock
+        List<String> times = Arrays.asList("2025-10-05 10:00", "2025-10-05 14:00");
+        return ResponseEntity.ok(times);
     }
 }
